--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -29,11 +29,22 @@
   }
 
   .description {
-    th {
-      text-align: left;
-    }
-    td {
-      text-align: center;
+    table {
+      width: 50%;
+      border: 1px solid #ddd;
+      border-collapse: collapse;
+
+      th {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+        background-color: #f2f2f2;
+      }
+      td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
     }
   }
 
